# SLAU

dz1/: tridiagMatrix.cpp
dz1/source/: CMakeLists.txt
task1/: test.cpp  tridiagMatrix.cpp  tridiagMatrix.hpp  tridiagMatrix_1.cpp
task1/source/: main.cpp
task2/: CMakeLists.txt  Instruction.txt
task2/source/: Matrix.cpp  Matrix.hpp  SparseMatrix.cpp  SparseMatrix.hpp  VectorOperations.cpp
task2/tests/: testMatrix.cpp  testSparseMatrix.cpp  testVectorOperations.cpp
task2/time_comparison/: main.cpp
task3/: CMakeLists.txt
task3/source/: Matrix.cpp
task3/tests/: testMatrix.cpp
